# cli-sandbox

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  src.hash
.github/: ci.yml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
src/: lib.rs
tests/: changelog.rs  fmt.rs  project.rs  version.rs
tests/meta/: fmt.rs
