[package]
name = "cli-sandbox"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tempfile = "3.5.0"
fastrand = { version = "1.9.0", optional = true }
pretty_assertions = { version = "1.3.0", optional = true }
regex = { version = "1.8.1", optional = true }

[features]
default = ["pretty_assertions", "dev", "regex", "fuzz"]
pretty_assertions = ["dep:pretty_assertions"]
dev = []
release = []
regex = ["dep:regex"]
deny-warnings = []
fuzz = ["dep:fastrand"]
fuzz_seed = ["dep:fastrand"]

[dev-dependencies]
git-cliff = "1.2.0"
