[package]
name = "cli-sandbox"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tempfile = "3.5.0"
fastrand = { version = "1.9.0", optional = true }
pretty_assertions = { version = "1.3.0", optional = true }
regex = { version = "1.8.1", optional = true }

[features]
default = ["pretty_assertions", "dev", "regex", "fuzz"]
pretty_assertions = ["dep:pretty_assertions"]
dev = []
release = []
regex = ["dep:regex"]
deny-warnings = []
fuzz = ["dep:fastrand"]
fuzz_seed = ["dep:fastrand"]

[dev-dependencies]
better-panic = "0.3.0"
blake2 = "0.10.6"
cargo_metadata = "0.15.4"
file-hashing = { version = "0.1.2", default-features = false }
git-cliff = "1.2.0"
git2 = "0.17.1"
num_cpus = "1.15.0"
semver = "1.0.17"
