[package]
name = "cli-sandbox"
version = "0.6.1"
edition = "2021"
license = "MIT"
description = "Utilities to help test your CLI"
homepage = "https://github.com/blyxyas/cli-sandbox"
readme = "README.md"
keywords = ["sandbox", "testing", "tests", "util"]
categories = [
	"development-tools",
	"development-tools::testing",
	"command-line-interface",
]
include = [
	"src",
	"Cargo.toml",
	"build.rs",
	"README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tempfile = "3.5.0"
fastrand = { version = "1.9.0", optional = true }
pretty_assertions = { version = "1.3.0", optional = true }
regex = { version = "1.8.1", optional = true }
better-panic = { version = "0.3.0", optional = true }
cargo_metadata = "0.15.4"

[features]
default = ["dev", "regex", "fuzz", "pretty"]
pretty_assertions = ["dep:pretty_assertions"]
dev = []
release = []
regex = ["dep:regex"]
deny-warnings = []
fuzz = ["dep:fastrand"]
fuzz_seed = ["dep:fastrand"]
better_panic = ["dep:better-panic"]
pretty = ["pretty_assertions", "better_panic"]

[build-dependencies]
cargo_metadata = "0.15.4"

[dev-dependencies]
cargo_metadata = "0.15.4"
better-panic = "0.3.0"
blake2 = "0.10.6"
file-hashing = { version = "0.1.2", default-features = false }
git-cliff = "1.2.0"
git2 = "0.17.1"
num_cpus = "1.15.0"
semver = "1.0.17"
